testsuite/bsc.typechecker/kind/NoArgPlusOne.bs
package NoArgPlusOne () where

x :: Bool Bool
x = _

